# vo-cal

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Brewfile  CLAUDE.md  Makefile  Package.swift  README.md  RUNBOOK.md
.claude/memory/: INDEX.md  architecture.md  decisions.md  glossary.md  people.md  (+3 more)
docs/: ARCHITECTURE.md  DATABASE.md  DECISIONS.md  DESIGN.md  INVARIANTS.md  PARSER_CONTRACT.md  PRODUCT_BRIEF.md  PROTOCOL_LOGIC.md  REDTEAM_FINDINGS.md  VOICE_CAPTURE.md
prototype/: README.md  app-preview.html  demo.html
scripts/: beta-metrics  check  check-api  doctor.sh  generate_ios_env.sh  metrics-dashboard  parser-eval  review  run_swiftlint.sh  smoke-prod  todo
services/api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
services/api/src/api/: __init__.py  auth.py  config.py  db.py  dependencies.py  errors.py  instrumented_client.py  logging_config.py  main.py  metrics.py  metrics_ingestion.py  middleware.py  rate_limit.py  storage.py
services/api/src/api/account/: __init__.py  router.py
services/api/src/api/admin/: router.py  schemas.py  store.py
services/api/src/api/captures/: __init__.py  router.py  schemas.py  store.py
services/api/src/api/checkin/: __init__.py  nudge.py  recommend.py  router.py  schemas.py  store.py
services/api/src/api/enrichment/: __init__.py  worker.py
services/api/src/api/intake/: __init__.py  router.py  schemas.py  store.py
services/api/src/api/meals/: __init__.py  router.py  schemas.py  store.py  today.py
services/api/src/api/nutrition/: __init__.py  build.py  dictionary.py  dictionary_seed.json  estimator.py  fdc_client.py  resolver.py  router.py  schemas.py  store.py
services/api/src/api/parser/: __init__.py  clarify.py  confidence.py  llm.py  prompts.py  router.py  schemas.py  store.py
services/api/src/api/protocols/: __init__.py  engine.py  router.py  schemas.py  store.py  why.py
services/api/src/api/transcribe/: __init__.py  elevenlabs.py  router.py  schemas.py  store.py
services/api/tests/: __init__.py  conftest.py  corpus.py  parser_eval.py  test_account_api.py  test_admin_api.py  test_admin_store.py  test_app_boot_security.py  test_auth.py  test_captures_api.py  test_captures_store.py  test_checkin_api.py  test_checkin_store.py  test_clarify_merge.py  test_confidence.py  test_db.py  test_dictionary.py  test_fdc_client.py  test_health.py  test_intake_api.py  test_llm_parse.py  test_meals_api.py  test_metrics_ingestion.py  test_middleware.py  test_nudge.py  test_parse_api.py  test_parser_schemas.py  test_produce.py  test_protocol_engine.py  test_protocols_api.py  test_recalibration_api.py  test_recommend.py  test_resolver.py  test_rls_probe.py  test_today_api.py  test_transcribe_api.py
services/api/tests/fixtures/: SCORES.md  transcripts.yaml
services/api/tests/fixtures/fdc_responses/: spanakopita_detail.json  spanakopita_search.json
services/api/tests/fixtures/llm_responses/: ambiguous_bowl_of_rice.json  ambiguous_pasta.json  ambiguous_some_chicken.json  brand_chobani.json  brand_quest_bar.json  canonical_beef.json  canonical_burger.json  canonical_chipotle.json  canonical_rice.json  filler_breakfast_oatmeal.json  filler_eggs_toast.json  filler_snack_almonds.json  mealtype_dinner_fish.json  mealtype_lunch.json  mixed_milk_cereal.json  mixed_units_meal.json  modifier_double_protein.json  modifier_extra_cheese_light_dressing.json  modifier_half_bagel.json  no_question_egg_count.json  no_question_low_impact.json  question_unknown_burger_ratio.json  question_unknown_oil_amount.json  runon_big_dinner.json  runon_breakfast_stack.json  runon_no_punctuation.json  runon_taco_night.json  spoken_eighty_twenty.json  spoken_four_ounces.json  spoken_ninety_three_seven.json  spoken_two_hundred_grams.json  state_cooked_pasta.json  state_raw_beef.json  state_unspecified_steak.json  variant_mayo_big.json
supabase/: config.toml
web/: README.md  index.html
(+125 files in other folders)
