[project]
name = "vocal-api"
version = "0.1.0"
description = "Vo-Cal API server — voice-first calorie/macro tracking backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "prometheus-client>=0.21",
    "supabase>=2.11",
    "python-multipart>=0.0.20",
    "anthropic>=0.109.1",
    "pyyaml>=6.0.3",
    "google-genai>=2.9.0",
    "openai>=2.43.0",
    "pyjwt[crypto]>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the api root on sys.path so `tests` is an importable package — the corpus
# loader (tests.corpus) is shared by the suite and scripts/parser-eval.
pythonpath = ["."]
# live_db tests need a running Supabase + real keys; deselect by default so
# the edit-loop suite is fully offline. live_llm hits the real Anthropic API;
# live_fdc hits real USDA FDC HTTP. All deselected by default.
#   uv run pytest -m live_db    # real Supabase
#   uv run pytest -m live_llm   # real Anthropic parse calls
#   uv run pytest -m live_fdc   # real USDA FoodData Central HTTP
addopts = "-m 'not live_db and not live_llm and not live_fdc'"
markers = [
    "live_db: requires a live Supabase instance with SUPABASE_URL + keys set",
    "live_llm: requires a live Anthropic API key (ANTHROPIC_API_KEY)",
    "live_fdc: requires a live USDA FoodData Central API key (USDA_FDC_API_KEY)",
]

# Ruff — fast Python linter and formatter (Beacon's config, adapted)
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0911", # branchy pure deterministic fns (resolver/clarify) legitimately return often
    "B008",    # FastAPI Depends() in function defaults is intentional
    "TC001", "TC002", "TC003", # type-checking blocks break Pydantic runtime
    "RUF002", "RUF003", # the → in data-flow docstrings/comments is intentional, not ambiguous
    "RUF005",  # list concatenation reads fine; unpacking isn't strictly better
    "UP042",   # `str, Enum` is explicit and fine; not forcing StrEnum
    "EM101", "EM102", # exception string literals are readable here
]

[tool.ruff.lint.per-file-ignores]
"src/api/metrics_ingestion.py" = ["ARG001"]  # unused user_id enforces auth
"tests/**/*.py" = [
    "ARG",     # unused arguments OK in tests (fixtures)
    "PLR2004", # magic values OK in tests
    "PLC0415", # imports inside test functions
    "S",       # no security lints in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
